--- a/Pos-System/Pos-System.API.csproj
+++ b/Pos-System/Pos-System.API.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="EPPlus" Version="7.0.0-preview1" />
     <PackageReference Include="FirebaseAdmin" Version="2.4.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.10" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.0" />
     <PackageReference Include="morelinq" Version="4.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="NLog" Version="5.0.5" />
